# surrealdb-migrations

./: .all-contributorsrc  .gitignore  .ignore  .mise.toml  .surrealdb  .surrealdb-alt  Cargo.toml  Dockerfile  LICENSE  before-integration-tests-strict.sh  before-integration-tests.sh  contributing.md  deny.toml  justfile  readme.md
.cargo/: config.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  example.yml  main.yml  pull-request.yml  release-docker.yml  release.yml  samples.yml  test.yml
.zed/: settings.json
embedded-files/events/: publish_post.surql  unpublish_post.surql
embedded-files/migrations/: 20230604_164503_CommentPost.surql
embedded-files/migrations/definitions/: _initial.json
embedded-files/migrations/down/: 20230604_164501_AddAdminUser.surql  20230604_164502_AddPost.surql  20230604_164503_CommentPost.surql
embedded-files/schemas/: comment.surql  post.surql  script_migration.surql  user.surql
samples/wasm/: package-lock.json  package.json  rsw.toml  vite.config.ts
samples/wasm/.rsw/: rsw.crates
samples/wasm/rsw-hello/: Cargo.toml  LICENSE_MIT
samples/wasm/rsw-hello/db/events/: publish_post.surql  unpublish_post.surql
samples/wasm/rsw-hello/db/migrations/: 20230520_102301_AddAdminUser.surql  20230520_102302_AddPost.surql
samples/wasm/rsw-hello/db/schemas/: post.surql  user.surql
samples/wasm/rsw-hello/src/: lib.rs
samples/wasm/src/routes/: +page.svelte
schema-files/mssql/: create_table.sql  create_table_with_index.sql  create_table_with_many_types.sql  create_table_with_multi_column_index.sql  create_table_with_multi_column_unique_index.sql  create_table_with_not_null.sql  create_table_with_relations.sql  create_table_with_script_migration.sql  create_table_with_unique_index.sql
src/: apply.rs  cli.rs  common.rs  config.rs  constants.rs  create.rs  definitions.rs  input.rs  io.rs  lib.rs  list.rs  main.rs  models.rs  redo.rs  remove.rs  scaffold.rs  status.rs  surrealdb.rs  tags.rs  validate_checksum.rs  validate_version_order.rs
src/branch/: args.rs  common.rs  constants.rs  diff.rs  list.rs  merge.rs  mod.rs  new.rs  remove.rs  status.rs
src/branch/merge/: mod.rs  overwrite.rs
src/branch/schemas/: branch.surql
src/cli/: args.rs  mod.rs
src/cli/commands/: apply.rs  branch.rs  create.rs  diff.rs  list.rs  mod.rs  scaffold.rs  status.rs
src/config/: common.rs  core.rs  db.rs  mod.rs
src/constants/: dir.rs  env.rs  file.rs  mod.rs  script.rs  tags.rs
src/create/: args.rs  mod.rs
src/diff/: args.rs  diff_symbol.rs  mod.rs  table_diff.rs
src/file/: mod.rs  surql.rs
src/list/: args.rs  mod.rs
src/models/: apply_operation.rs  data.rs  migration_direction.rs  mod.rs
src/runbin/: apply_operation.rs  config.rs  db_config.rs  env.rs  io.rs  mod.rs  surrealdb.rs
src/scaffold/: args.rs  common.rs  mod.rs  schema.rs  template.rs
src/scaffold/schema/: args.rs  mod.rs
src/scaffold/template/: args.rs  mod.rs
src/status/: args.rs  mod.rs
templates/blog/events/: publish_post.surql  unpublish_post.surql
templates/blog/migrations/: YYYYMMDD_HHMM01_AddAdminUser.surql
templates/blog/migrations/down/: YYYYMMDD_HHMM01_AddAdminUser.surql
templates/blog/schemas/: comment.surql  permission.surql  post.surql  script_migration.surql  user.surql
templates/ecommerce/events/: purchase.surql  register_customer.surql
templates/ecommerce/migrations/: YYYYMMDD_HHMM01_AddCustomers.surql  YYYYMMDD_HHMM02_AddProducts.surql  YYYYMMDD_HHMM03_PurchaseProducts.surql
templates/ecommerce/migrations/down/: YYYYMMDD_HHMM01_AddCustomers.surql  YYYYMMDD_HHMM02_AddProducts.surql  YYYYMMDD_HHMM03_PurchaseProducts.surql
templates/ecommerce/schemas/: address.surql  customer.surql  product.surql  purchased.surql  purchases.surql  script_migration.surql
templates/empty/schemas/: script_migration.surql
tests/: main.rs
tests/cli/: apply.rs  create.rs  definitions.rs  diff.rs  list.rs  main.rs  mod.rs  remove.rs  scaffold.rs  status.rs
tests/cli/apply/: common.rs  down.rs  down_single.rs  down_to.rs  e2e.rs  mod.rs  redo.rs  reset.rs  tags.rs  up.rs  up_single.rs  up_to.rs  validate_checksum.rs  validate_version_order.rs
tests/cli/apply/snapshots/: main__cli__apply__common__apply_fails_if_both_down_and_redo_args_provided.snap  main__cli__apply__common__apply_fails_if_both_down_and_reset_args_provided.snap  main__cli__apply__common__apply_fails_if_both_redo_and_reset_args_provided.snap  main__cli__apply__common__apply_fails_if_both_up_and_down_and_reset_args_provided.snap  main__cli__apply__common__apply_fails_if_both_up_and_down_args_provided.snap  main__cli__apply__common__apply_fails_if_both_up_and_down_redo_and_reset_args_provided.snap  main__cli__apply__common__apply_fails_if_both_up_and_redo_args_provided.snap  main__cli__apply__common__apply_fails_if_both_up_and_reset_args_provided.snap  main__cli__apply__down_single__apply_revert_single_migration-2.snap  main__cli__apply__e2e__Initial migration events.snap  main__cli__apply__e2e__Initial migration schemas.snap  main__cli__apply__e2e__Second migration.snap  (+12 more)
tests/cli/branch/: diff.rs  list.rs  merge.rs  mod.rs  new.rs  remove.rs  status.rs
tests/cli/branch/merge/: mod.rs  (+1 more)
tests/cli/create/: event.rs  migration.rs  mod.rs  schema.rs
tests/cli/scaffold/: mod.rs  schema.rs  template.rs
tests/cli/snapshots/: main__cli__definitions__Initial migration definition.snap  main__cli__diff__apply_field_changes.snap  main__cli__diff__migrations_not_applied.snap  main__cli__diff__no_changes_detected.snap  main__cli__list__list_blog_migrations.snap  main__cli__status__checksum_capability_disabled.snap  main__cli__status__fails_if_no_script_migration_definition.snap  main__cli__status__no_migrations_applied.snap  main__cli__status__status_up_to_date.snap  main__cli__status__with_migrations_left.snap  main__cli__status__with_missing_migration_files.snap
tests/helpers/: assert.rs  cli.rs  common.rs  config.rs  input.rs  insta_filters.rs  io.rs  mod.rs  models.rs  surrealdb.rs
tests/lib/: helpers.rs  list.rs  main.rs  up.rs  up_to.rs
(+34 files in other folders)
