[package]
name = "surrealdb-migrations"
version = "2.2.1"
description = "An awesome SurrealDB migration tool, with a user-friendly CLI and a versatile Rust library that enables seamless integration into any project."
authors = ["David Bottiau"]
repository = "https://github.com/Odonno/surrealdb-migrations/"
documentation = "https://docs.rs/surrealdb-migrations/"
readme = "readme.md"
license = "MIT"
keywords = ["surrealdb", "migrations", "cli"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
chrono-human-duration = "0.1.1"
clap = { version = "4.5.35", features = ["derive"] }
cli-table = "=0.4.7"
color-eyre = "0.6.3"
convert_case = { version = "0.8.0", optional = true }
diffy = "0.4.2"
fs_extra = "1.3.0"
include_dir = "0.7.4"
itertools = "0.14.0"
lexicmp = "0.2.0"
names = { version = "0.14.0", default-features = false, optional = true }
regex = { version = "1.11.1", optional = true }
rust-ini = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlparser = { version = "0.52.0", optional = true }
surrealdb = { version = "2.2.2", features = ["protocol-http", "jwks"] }
tokio = { version = "1.44.2", features = ["macros"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
dir-diff = "0.3.3"
insta = { version = "1.42.2", features = ["filters"] }
names = { version = "0.14.0", default-features = false }
predicates = "3.1.3"
pretty_assertions = "1.4.1"
regex = "1.11.1"
serial_test = "3.2.0"
tokio-test = "0.4.4"

[features]
default = ["scaffold"]
branching = ["dep:names"]
scaffold = ["dep:regex"]
scaffold-sql = ["scaffold", "dep:convert_case", "dep:sqlparser"]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
