[package]
name = "rsw-hello"
version = "0.1.0"
authors = ["Odonno <bottiau.david@laposte.net>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
include_dir = "0.7.4"
js-sys = "0.3.76"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
surrealdb = { version = "2.1.4", features = ["kv-indxdb"] }
surrealdb-migrations = { path = "../../.." }
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
